# scalehub

./: .gitignore  DESIGN.md  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  test_thread_aggregation.py
.github/workflows/: monitor.yaml
conf/: ansible.cfg  defaults.ini  pico_hosts  scalehub.conf  scalehub.ini
conf/experiment/: bm_and_pico.ini  bm_and_pico_tms.ini  bm_only.ini  local_experiment.ini  mix.ini  mix_node_bm_pico.ini  mix_node_bm_pico_opt.ini  mix_node_bm_vml.ini  mix_node_bm_vms.ini  mix_node_vml_pico.ini  mix_node_vml_vms.ini  multi_node_bm.ini  multi_node_pico.ini  multi_node_vml.ini  multi_node_vml_2c.ini  multi_node_vms.ini  multi_node_vms_2c.ini  multi_slot_run.ini  multiple_run.ini  pico_only.ini  resource_exp.ini  resource_exp_1.ini  resource_exp_2.ini  resource_exp_bm.ini  resource_exp_pico.ini  resource_exp_vml.ini  resource_exp_vms.ini  single_node.ini  single_node_bm.ini  single_node_bm_4c.ini  single_node_pico.ini  single_node_vml.ini  single_node_vml_2c.ini  single_node_vms.ini  single_run.ini  test.ini
conf/nginx/: grafana.conf
conf/provision/: multi_site.ini  nantes_full.ini  nantes_small.ini  nantes_vagrant.ini  rennes_and_pico.ini  rennes_full.ini  rennes_full_late.ini  rennes_medium.ini  rennes_small.ini  rennes_vagrant.ini  scalehub_full_late.ini
dockerfile/: Dockerfile  docker-compose.yaml  entrypoint.sh  nginx.conf  requirements.txt  shub.fish
dockerfile/experiment-monitor/: Dockerfile  experiment-monitor.py  requirements.txt
dockerfile/fish/: crontab  shub.fish
dockerfile/nginx/: nginx.conf
dockerfile/secrets/: Grid5000_creds.yaml  README.md
experiment-monitor/: .gitlab-ci.yml  Dockerfile  box_plot.py  docker-compose.yaml  experiment-monitor.py  requirements.txt  tester.py
experiment-monitor/templates/: consul-latency.yaml.j2  flink-latency.yaml.j2  load-generator-deployment.yaml.j2  load-generator-service.yaml.j2  storage-latency.yaml.j2
explanation/: experiment_logical_view.drawio  explanation.MD
explanation_2/: README.md
info/: EuroParPaper.md
paper-plots/: fix_logs.py
playbooks/: PLAYBOOKS.md  cluster.yaml  flink.yaml  kafka.yaml  load_generators.yaml  monitoring.yaml  transscale.yaml
recaps/: Recap_february.md
script/: shub
scripts/: shub
setup/: step2.md
src/: shub
test/: conftest.py
(+8922 files in other folders)
