[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scalehub"
version = "1.0.0"
description = "A containerized tool for provisioning clusters and deploying K3S with data stream processing experiments on Grid5000"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Khaled Arsalane", email = "contact@khaled.ovh" }
]
maintainers = [
    { name = "Khaled Arsalane", email = "contact@khaled.ovh" }
]
keywords = ["kubernetes", "k3s", "flink", "stream-processing", "experiments", "grid5000", "docker", "container"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Clustering",
    "Environment :: Console",
    "Framework :: Docker",
]
requires-python = ">=3.8"
dependencies = [
    # Core dependencies defined in setup/scalehub/requirements.txt and setup/monitor/requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/ark-sys/scalehub"
Repository = "https://github.com/ark-sys/scalehub"
Documentation = "https://github.com/ark-sys/scalehub#readme"
"Bug Tracker" = "https://github.com/ark-sys/scalehub/issues"
"Source Code" = "https://github.com/ark-sys/scalehub"

[tool.setuptools]
packages = ["scripts", "monitor"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.conf", "*.ini", "*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=scripts --cov=monitor --cov-report=html --cov-report=term"
